--- a/package.json
+++ b/package.json
@@ -4,15 +4,26 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@loskir/styled-qr-code-node": "^1.5.1",
+    "canvas": "^2.11.2",
     "cors": "^2.8.5",
+    "easyqrcodejs-nodejs": "^4.4.5",
     "express": "^4.18.2",
+    "fs": "^0.0.1-security",
+    "jimp": "^0.22.8",
+    "jsdom": "^22.1.0",
     "node": "^20.4.0",
-    "qrcode": "^1.5.3"
+    "qr-code-styling": "^1.6.0-rc.1",
+    "qr-code-styling-new": "^1.6.1",
+    "qr-code-styling-node": "^1.5.0",
+    "qrcode": "^1.5.3",
+    "qrcode-with-logos": "^1.0.3"
   }
 }
